[tool.poetry]
name = "pyasstosrt"
version = "1.3.0"
description = "Convert ASS subtitle to SRT format"
authors = ["GitBib <me@bnff.website>"]
license = "Apache License, Version 2.0, see LICENSE file"
readme = "README.md"
homepage = "https://github.com/GitBib/pyasstosrt"
repository = "https://github.com/GitBib/pyasstosrt"
keywords = ["ASS subtitle", "SRT", "Convert"]
classifiers = [
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Programming Language :: Python :: Implementation :: CPython',
]
packages = [
    { include = "pyasstosrt" },
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
fire = { version = ">=0.3.1", optional = true }
pyfiglet = { version = "*", optional = true }

[tool.poetry.dev-dependencies]
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[tool.poetry.extras]
cli = ["fire", "pyfiglet"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pylint.MESSAGE_CONTROL]
disable = [
    "cyclic-import",
    "duplicate-code",
    "line-too-long",
    "missing-class-docstring",
    "missing-module-docstring",
    "super-init-not-called",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "ungrouped-imports",
    "unused-import",
]
enable = "useless-suppression"

[tool.pylint.REPORTS]
reports = "no"

[tool.pylint.FORMAT]
max-line-length = "120"

[tool.pylint.VARIABLES]
ignored-argument-names = "args|kwargs|_|__"

[tool.pylint.BASIC]
good-names = "_,__,i,e,k,v,fn,get,post,put,patch,delete,route,asgi,websocket,Dependency,Body,Parameter,HandlerType,ScopeType,Auth,User"
no-docstring-rgx="(__.*__|main|test.*|.*test|.*Test|^_.*)$"


[tool.pylint.LOGGING]
# Logging modules to check that the string format arguments are in logging
# function parameter format
logging-modules=["logging","picologging"]


[tool.coverage.run]
omit = ["*/tests/*"]

[tool.pycln]
all = true

[tool.pyright]
include = ["pyasstosrt", "tests"]
